--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -156,8 +156,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">F.C. Barcelona 2022/23 Stadium Home</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -187,7 +187,7 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Liverpool F.C. 2022/23 Match Home</a></h3>
                                                 <div class="price">
-                                                    $43.50
+                                                    Rp 43.50
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -217,8 +217,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Chelsea F.C. 2022/23 Stadium Away</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -248,8 +248,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Paris Saint-Germain 2022/23 Match Home</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -280,8 +280,8 @@
                                                 <h3 class="title"><a href="javaScript:void(0)">Croatia 2022/23 Stadium Home</a>
                                                 </h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -311,7 +311,7 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Netherlands 2022/23 Stadium Home</a></h3>
                                                 <div class="price">
-                                                    $43.50
+                                                    Rp 43.50
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -341,8 +341,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">England 2022/23 Stadium Home</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -372,8 +372,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Brazil 2022/23 Stadium Home</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -402,8 +402,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Barcelona 20/21 Home Kit</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$85.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 85.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -432,7 +432,7 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Le Bron James Lakers Jersey</a></h3>
                                                 <div class="price">
-                                                    $43.50
+                                                    Rp 43.50
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -461,8 +461,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Chelsea 20/21 Home Kit</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -492,8 +492,8 @@
                                                 <h3 class="title"><a href="javaScript:void(0)">Atletico Madrid C.F 20/21 Home Kit</a>
                                                 </h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -523,8 +523,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Argentina 2022 Home Kit</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -554,7 +554,7 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Manchester United 22/23 Home Kit</a></h3>
                                                 <div class="price">
-                                                    $43.50
+                                                    Rp 43.50
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -584,8 +584,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Mexico 2022 Home Kit</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
@@ -615,8 +615,8 @@
                                             <div class="product-content">
                                                 <h3 class="title"><a href="javaScript:void(0)">Japan 2022 Home Kitt</a></h3>
                                                 <div class="price">
-                                                    $63.50
-                                                    <span>$75.00</span>
+                                                    Rp 63.50
+                                                    <span>Rp 75.00</span>
                                                 </div>
                                                 <ul class="rating">
                                                     <li class="fa fa-star"></li>
