--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -135,7 +135,7 @@
 
                 <div class="col-lg-10 col-md-9 col-12">
                     <div id="katalog">
-                        <div id="jersey-man">
+                        <div>
                             <div class="catalogueCont">
                                 <div class="row">
                                     <div class="col-lg-3 col-md-6 col-6">
@@ -630,6 +630,10 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="contentTest" id="jersey-man">
+                                <div class="row">
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -666,7 +670,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 </script>
+<script src="js/catalogue.js"></script>
 <script src="js/common.js"></script>
-
 
 </html>
