--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                                     <div class="row card-content">
                                         <div class="col-lg-6 col-md-6">
                                             <div class="card-1">
-                                                <span class="featured"><img
+                                                <span class="featured sp-none"><img
                                                          src="/img/feature.png" alt=""></span>
                                                 <img class="img-def"  src="/img/card-img-1.png"
                                                     alt="">
-                                                <span class="card-arrow"><a href=""><img
+                                                <span class="card-arrow sp-none"><a href=""><img
                                                              src="/img/circle-arrow.png"
                                                             alt=""></a></span>
                                             </div>
@@ -325,13 +325,16 @@
                                                 <p class="lower-caption">Agency is a full-service agency, busy designing
                                                     and building beautiful digital products, brands, and experiences.
                                                 </p>
+                                                <a href="" class="sp-show"><img
+                                                    src="/img/circle-arrow.png"
+                                                   alt=""></a>
                                             </div>
                                         </div>
                                         <div class="col-lg-6 col-md-6">
                                             <div class="card-2">
                                                 <img class="img-def"  src="/img/card-img-2.png"
                                                     alt="">
-                                                <span class="card-arrow"><img
+                                                <span class="card-arrow sp-none"><img
                                                          src="/img/circle-arrow.png"
                                                         alt=""></span>
                                             </div>
@@ -340,6 +343,7 @@
                                                 <p class="lower-caption">Agency is a full-service agency, busy designing
                                                     and building beautiful digital products, brands, and experiences.
                                                 </p>
+                                                <img class="sp-show" src="/img/circle-arrow.png" alt="">
                                             </div>
                                         </div>
                                     </div>
