--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -307,7 +307,129 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-12 mb-2 promoBanner mt50" id="promo2">
+              <div class="promoBanner">
+                <a href=""><img src="../ASSETS/banner-wc.jpg"></a>
+              </div>
+              <div class="row mt50">
+                <div class="col-lg-3 col-md-3 col-6">
+                  <div class="product-grid3" data-product="new" data-brand="${product.brand}">
+                    <div class="product-image3">
+                      <a href="javaScript:void(0)">
+                        <img class="pic-1" src="https://cdn1.uksoccershop.com/images/cache/re_1663591037_switzerland-away-shirt-475x0.webp">
+                        <img class="pic-2" src="https://cdn1.uksoccershop.com/images/cache/adtnl_prodts_img/re_1663591037_switzerland-away-shirt-back-475x0.jpg">
+                      </a>
+                      <ul class="social">
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
+                      </ul>
+                      <span class="product-new-label">New</span>
+                    </div>
+                    <div class="product-content">
+                      <h3 class="title"><a href="javaScript:void(0)">2022-2023 Switzerland Away Shirt</a></h3>
+                      <div class="price">
+                        Rp 1.500.000
+                      </div>
+                      <ul class="rating">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star disable"></li>
+                        <li class="fa fa-star disable"></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-6">
+                  <div class="product-grid3" data-product="new" data-brand="${product.brand}">
+                    <div class="product-image3">
+                      <a href="javaScript:void(0)">
+                        <img class="pic-1" src="https://cdn1.uksoccershop.com/images/cache/re_1661971602_senegal-away-shirt-475x0.webp">
+                        <img class="pic-2" src="https://cdn1.uksoccershop.com/images/cache/re_1661971602_senegal-away-shirt-475x0.webp">
+                      </a>
+                      <ul class="social">
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
+                      </ul>
+                      <span class="product-new-label">New</span>
+                    </div>
+                    <div class="product-content">
+                      <h3 class="title"><a href="javaScript:void(0)">2022-2023 Senegal Away Shirt</a></h3>
+                      <div class="price">
+                        Rp 1.500.000
+                      </div>
+                      <ul class="rating">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star disable"></li>
+                        <li class="fa fa-star disable"></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-6">
+                  <div class="product-grid3" data-product="new" data-brand="${product.brand}">
+                    <div class="product-image3">
+                      <a href="javaScript:void(0)">
+                        <img class="pic-1" src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/58701095bf074670aa8baea6010e83e7_9366/Spain_22_Home_Jersey_Red_HL1970_22_model.jpg">
+                        <img class="pic-2" src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/2ce0dd00e6ba41e8ada9aea6010e8bf3_9366/Spain_22_Home_Jersey_Red_HL1970_23_hover_model.jpg">
+                      </a>
+                      <ul class="social">
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
+                      </ul>
+                      <span class="product-new-label">New</span>
+                    </div>
+                    <div class="product-content">
+                      <h3 class="title"><a href="javaScript:void(0)">Spain 22 Home Jersey</a></h3>
+                      <div class="price">
+                        Rp 1.750.000
+                      </div>
+                      <ul class="rating">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star disable"></li>
+                        <li class="fa fa-star disable"></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-6">
+                  <div class="product-grid3" data-product="new" data-brand="${product.brand}">
+                    <div class="product-image3">
+                      <a href="javaScript:void(0)">
+                        <img class="pic-1" src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/8b5f0d2f2cdf4499aaf0aeec00914506_9366/Germany_22_Home_Jersey_White_HJ9606_22_model.jpg">
+                        <img class="pic-2" src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/6f83d2098ba44418b270aeec00915015_9366/Germany_22_Home_Jersey_White_HJ9606_23_hover_model.jpg">
+                      </a>
+                      <ul class="social">
+                        <li><a href="javaScript:void(0)"><i class="fa fa-heart"></i></a></li>
+                        <li><a href="javaScript:void(0)"><i class="fa fa-shopping-cart"></i></a></li>
+                      </ul>
+                      <span class="product-new-label">New</span>
+                    </div>
+                    <div class="product-content">
+                      <h3 class="title"><a href="javaScript:void(0)">Germany 22 Home Jersey</a></h3>
+                      <div class="price">
+                        Rp 1.800.000
+                      </div>
+                      <ul class="rating">
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star"></li>
+                        <li class="fa fa-star disable"></li>
+                        <li class="fa fa-star disable"></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
       </div>
     </section>
 
