--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -310,7 +310,7 @@
           <div class="row">
             <div class="col-lg-12 col-md-12 col-12 mb-2 promoBanner mt50" id="promo2">
               <div class="promoBanner">
-                <a href=""><img src="/ASSETS/banner-wc.jpg"></a>
+                <a href=""><img src="/Jersey-Store/ASSETS/banner-wc.jpg"></a>
               </div>
               <div class="row mt50">
                 <div class="col-lg-3 col-md-3 col-6">
