--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -102,9 +102,54 @@
         <!-- END MODAL -->
     </section>
 
+    <!-- CHECKOUT HEADER -->
+    <nav id="logo" class="navbar navbar-expand-lg navbar-light sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand brand-black" href="#"
+                style="font-family: 'Norican', cursive; font-size: 30px;">Jersey
+                Store</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link sans-serif" href="index.html">HOME</i></a>
+                    <li class="nav-item  ">
+                        <a class="nav-link sans-serif dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false"> KATALOG<span
+                                class="sr-only">(current)</span></a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item current" href="katalog.html">MEN'S JERSEY</a>
+                            <a class="dropdown-item" href="#">WOMEN'S JERSEY</a>
+                            <a class="dropdown-item" href="#">SPORTSWEAR</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sans-serif" href="katalog.html">CUSTOMIZE</i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link sans-serif" href="about.html">ABOUT<span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul class="nav-icons row">
+                    <li id="login" class="col-lg-4 col-4">
+                        <a href="modal.html" data-toggle="modal" data-target="#loginModal"><i
+                                class="fa fa-user"></i></a>
+                    </li>
+                </ul>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+    </nav>
+    <!-- CHECKOUT HEADER -->
+
 
     <section id="main">
-        
+
     </section>
     <footer></footer>
 </body>
