--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -130,6 +130,7 @@
         <div class="container-fluid">
             <div class="row">
                 <!-- START SIDEBAR -->
+                <div id="sidebar" class="col-lg-2 col-md-3 sp-none"></div>
                 <!-- END SIDEBAR -->
 
                 <div class="col-lg-10 col-md-9 col-12">
