--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -103,7 +103,7 @@
     </section>
 
     <!-- CHECKOUT HEADER -->
-    <nav id="logo" class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav id="logo" class="navbar navbar-checkout navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand brand-black" href="#"
                 style="font-family: 'Norican', cursive; font-size: 30px;">Jersey
