--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -23,7 +23,7 @@
     <title>Jersey Store - Toko Online Jersey Original Terlengkap</title>
 </head>
 
-<body>
+<body class="checkoutPage">
     <section>
         <div id="UpperNav">
             <ul class="nav navbar-expand-lg bg-grey">
@@ -46,7 +46,6 @@
             </ul>
         </div>
     </section>
-
     <!-- START MODAL -->
     <section>
         <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
@@ -101,7 +100,6 @@
         </div>
         <!-- END MODAL -->
     </section>
-
     <!-- CHECKOUT HEADER -->
     <nav id="logo" class="navbar navbar-checkout navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
