--- a/Jersey-Store/katalog.html
+++ b/Jersey-Store/katalog.html
@@ -142,13 +142,13 @@
                     </div>
 
                     <nav id="pagination" aria-label="Page navigation example" style="margin-top: 50px;">
-                            <a class="page-link page-before" href="#katalog" role="button"  tabindex="-1"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
+                            <a class="page-link page-before" href="#main" role="button"  tabindex="-1"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
                             <div class="pagination justify-content-center">
                             </div>
                             <!-- <li class="page-item active pagination-number"><a class="page-link" href="#">1</a></li>
                             <li class="page-item disabled pagination-number"><a class="page-link" href="#">2</a></li>
                             <li class="page-item disabled pagination-number"><a class="page-link" href="#">3</a></li> -->
-                            <a class="page-link page-after" href="#katalog" role="button"  tabindex="1"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                            <a class="page-link page-after" href="#main" role="button"  tabindex="1"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                     </nav>
                 </div>
             </div>
