--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -147,7 +147,32 @@
 
 
     <section id="main">
-
+        <div class="catalogueHeader">
+            <div class="row">
+                <p class="text-left col-lg-2"
+                    style="font-family: 'Anton', sans-serif; font-size: 40px; padding-left: 40px;">ORDER DETAIL</p>
+                <nav class="text-left col-lg-9" aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="katalog.html">Men's Jersey</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Checkout</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+        <!-- TABLE -->
+        <table class="table">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col">No.</th>
+                <th scope="col">Items</th>
+                <th scope="col">Qty</th>
+                <th scope="col">Price</th>
+              </tr>
+            </thead>
+            <tbody class="order-container">
+            </tbody>
+          </table>
     </section>
     <footer></footer>
 </body>
