--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -162,17 +162,32 @@
         <!-- TABLE -->
         <table class="table">
             <thead class="thead-dark">
-              <tr>
-                <th scope="col">No.</th>
-                <th scope="col">Items</th>
-                <th scope="col">Qty</th>
-                <th scope="col">Price</th>
-              </tr>
+                <tr>
+                    <th scope="col">No.</th>
+                    <th scope="col">Items</th>
+                    <th scope="col">Qty</th>
+                    <th scope="col">Price</th>
+                </tr>
             </thead>
             <tbody class="order-container">
-               
+
             </tbody>
-          </table>
+        </table>
+
+        <div id="couponWindow">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-8 col-8">
+                        <input class="couponName" type="text" maxlength="6">
+                    </div>
+                    <div class="col-lg-4 col-4">
+                        <button type="button" class="btn btn-warning btn-coupon"><h3>REDEEM</h3></button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        </div>
     </section>
     <footer></footer>
 </body>
