--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -176,7 +176,7 @@
 
         <div id="couponWindow">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row couponCont">
                     <div class="col-lg-8 col-8">
                         <input class="couponName" type="text" maxlength="6">
                     </div>
