--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -180,7 +180,7 @@
                     <div class="col-lg-8 col-8">
                         <input class="couponName" type="text" maxlength="6">
                     </div>
-                    <div class="col-lg-4 col-4">
+                    <div class="col-lg-4 col-4" style="text-align: center;">
                         <button type="button" class="btn btn-warning btn-coupon"><h3>REDEEM</h3></button>
                     </div>
                 </div>
