--- a/Jersey-Store/checkout.html
+++ b/Jersey-Store/checkout.html
@@ -179,10 +179,14 @@
                 <div class="row couponCont">
                     <div class="col-lg-8 col-8">
                         <input class="couponName" type="text" maxlength="6">
-                        <p class="message">aaa</p>
                     </div>
                     <div class="col-lg-4 col-4" style="text-align: center;">
                         <button type="button" class="btn btn-warning btn-coupon"><h3>REDEEM</h3></button>
+                    </div>
+                </div>
+                <div class="row couponCont">
+                    <div class="col-lg-12 col-12">
+                    <p class="message"></p>
                     </div>
                 </div>
 
