--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -182,7 +182,7 @@
     <section>
       <h2 class="mt50" style="font-family: 'Anton', sans-serif;">SPECIAL OFFERS FOR YOU</h2>
       <div id="promo" data-aos="fade-up">
-        <div class="midContainer mt50" data-aos="fade-up">
+        <div id="katalog" class="midContainer mt50" data-aos="fade-up">
           <div class="row">
             <div class="col-lg-6 col-md-6 col-12 mb-2 promoBanner" id="promo1">
               <div class="promoBanner">
