--- a/Jersey-Store/shoes.html
+++ b/Jersey-Store/shoes.html
@@ -22,7 +22,7 @@
     <title>Jersey Store - Toko Online Jersey Original Terlengkap</title>
 </head>
 
-<body>
+<body class="cataloguePage"> 
     <section>
         <div id="UpperNav">
             <ul class="nav navbar-expand-lg bg-grey">
