--- a/Jersey-Store/index.html
+++ b/Jersey-Store/index.html
@@ -134,7 +134,7 @@
         </div>
 
         <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-          <a href="">
+          <a href="katalog-sportswear.html">
             <div class="cat-content myfilter">
               <img
                 src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/6de5e6a6913c4b84bac2aeeb0131ba70_9366/Camo_Allover_Print_Pullover_Hoodie_Blue_GA8001_41_detail.jpg"
@@ -145,7 +145,7 @@
       </div>
 
       <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-        <a href="katalog-sports.html">
+        <a href="katalog-sportswear.html">
           <div class="cat-content myfilter">
             <img
               src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/ddd2cc87495145a78947ae4a00fa85bc_9366/Studio_Lounge_Fleece_Hoodie_Beige_HC5881_41_detail.jpg"
@@ -167,7 +167,7 @@
       </div>
 
       <div class="col-lg-2 col-md-6 col-6 mt-2" align="center">
-        <a href="katalog-sports.html">
+        <a href="katalog-sportswear.html">
           <div class="cat-content myfilter">
             <img
               src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/4e9f4bf4ae664b0798d4ae6201337d82_9366/Al_Rihla_League_Ball_White_H57791_01_standard.jpg"
