--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="content" class="fade-in">
-            <div class="container-fluid" id="top">
+            <div id="top">
                 <!-- Navbar -->
                 <nav class="navbar navbar-expand-lg block">
                     <div class="container-fluid">
@@ -59,15 +59,16 @@
                         </form>
                       </div>
                     </div>
-                  </nav>
+                </nav>
                 <!-- Navbar -->
+            <div class="container-fluid">
                 <section id="section1">
                     <div id="about" class="cst-container cont-background">
 
                         <div class="content">
-                            <div class="container">
+                            <div class="container-fluid">
                                 <div class="row vh60">
-                                    <div class="col-lg-5">
+                                    <div class="col-lg-5 col-12">
                                         <div class="top-caption">
                                             <span class="sub-header"><img src="/img/sub-header.png" alt=""></span>
                                             <h1>Reimagining social media through the power of the blockchain.</h1>
@@ -79,12 +80,12 @@
                                             </div>
                                         </div>
                                         <button type="button" class="btn btn-primary btn-green">Learn More</button>
-                                        <div style="text-align:center; margin-top:30px;">
+                                        <div style="text-align:center; margin-top:30px;" class="sp-none">
                                             <span class="dot" onclick="currentSlide(1)"></span>
                                             <span class="dot" onclick="currentSlide(2)"></span>
                                         </div>
                                     </div>
-                                    <div class="col-lg-7 text-center">
+                                    <div class="col-lg-7 col-12 text-center">
                                         <div id="top-slideshow" class="center">
                                             <!-- CAROUSEL -->
                                             <div class="slideshow-container">
@@ -106,7 +107,7 @@
                     </div>
                 </section>
             </div>
-
+            </div>
 
             <section id="section2">
                 <div class="cst-container">
@@ -253,19 +254,22 @@
                         <div class="width-half width-container1">
                         </div>
                         <div class="width-half width-container2">
-                            <div class="content">
-                                <h2 class="title">What makes us different?</h2>
-                                <p class="sub-title">We would only launch tokens with the express permission of the
-                                    creators.</p>
-                                <p class="caption">There are several thousand celebrities and creators on twitter, tiktok,
-                                    Instagram and YouTube with followings in the millions who we would be actively engaging
-                                    before we go viral. We would get them on our platform and they would see the opportunity
-                                    to create a fan driven digital economy where their digital content can be traded as NFTs
-                                    and their most loyal fans can have the monetary value of their creator's currency
-                                    increase significantly as they promote their digital currency across their channels
-                                    while our native token holders benefit from the Weentar popularity.
-                                    <br>We would only launch tokens with the express permission of the creators.
-                                </p>
+                            <div class="container">
+                                <div class="content">
+                                    <h2 class="title">What makes us different?</h2>
+                                    <p class="sub-title">We would only launch tokens with the express permission of the
+                                        creators.</p>
+                                    <p class="caption">There are several thousand celebrities and creators on twitter, tiktok,
+                                        Instagram and YouTube with followings in the millions who we would be actively engaging
+                                        before we go viral.<br>
+                                        We would get them on our platform and they would see the opportunity
+                                        to create a fan driven digital economy where their digital content can be traded as NFTs
+                                        and their most loyal fans can have the monetary value of their creator's currency
+                                        increase significantly as they promote their digital currency across their channels
+                                        while our native token holders benefit from the Weentar popularity.
+                                        <br>We would only launch tokens with the express permission of the creators.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -322,8 +326,8 @@
                             </div>
                         </div>
                         <div class="row lower-content">
-                            <div class="col-lg-6">
-                                <h2><span><img src="/img/img-logo.png" class="base-vert" alt=""></span>Tokner is coming</h2>
+                            <div class="col-lg-6 mt-3-sp">
+                                <h2><span><img src="/img/img-logo.png" class="base-vert" alt=""></span><span class="sp-none">Tokner is coming</span><span class="sp-show">Weentar is coming</span></h2>
                                 <p class="caption"><b>
                                     Cryptocurrency adoption is at less than 1% of the global world population with some
                                     countries and entities actively fighting against its mass adoption and the smartest
@@ -334,13 +338,14 @@
                                     How far down? So down that even a celebrity can explain it in simple words to their
                                     followers and have them download an app, buy into the social currency of their
                                     favourite person and watch their
-                                    investment as is with other crypto currency project. <br>
+                                    investment as is with other crypto currency project.</p>
+                                <span class="more-text">
+                                <p class="caption">
                                     We are trying to do to this space what investment apps did for the "nonexistent
                                     retail investors". We are gamefying digital currency, bringing in popular faces
                                     instead of hard to understand projects to make it the norm and inadvertently being
                                     the "gateway drug" for a lot of people to finally give this space a real look.
                                 </p>
-                                <span class="more-text">
                                     <p class="caption">
                                         <b>new digital economy is coming. People would be just as powerful as countries and
                                         creators would be paid beyond the peanuts that conventional social media platforms
