--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -403,7 +403,7 @@
                                 <button class="btn btn-outline-success btn-green-transparent btn-more" type="submit">Read More</button>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
-                                <img class="img-block" src="/img/lower-content-img.png" alt="">
+                                <img class="img-block" src="/testfrontend2/img/lower-content-img.png" alt="">
                             </div>
                         </div>
                     </div>
