--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -363,7 +363,7 @@
                         <div class="row lower-content">
                             <div class="col-lg-6 col-md-6 mt-3-sp">
                                 <h2><span><img src="/testfrontend2/img/img-logo.png" class="base-vert" alt=""></span><span class="sp-none">Tokner is coming</span><span class="sp-show">Weentar is coming</span></h2>
-                                <p class="caption"><b>
+                                <p id="caption-read" class="caption read-blur"><b>
                                     Cryptocurrency adoption is at less than 1% of the global world population with some
                                     countries and entities actively fighting against its mass adoption and the smartest
                                     developers and nerds holding the fort.</b><br>
