--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -400,7 +400,8 @@
                                         you would own it because it would make the most sense in the world.
                                     </p>
                                 </span>
-                                <button class="btn btn-outline-success btn-green-transparent btn-more" type="submit">Read More</button>
+                                <button class="btn btn-outline-success btn-green-transparent btn-more sp-none" type="submit">Read More</button>
+                                <button class="btn btn-outline-success btn-green-transparent btn-more sp-show" type="submit">Read More</button>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <img class="img-block" src="/testfrontend2/img/lower-content-img.png" alt="">
