--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -401,7 +401,6 @@
                                     </p>
                                 </span>
                                 <button class="btn btn-outline-success btn-green-transparent btn-more sp-none" type="submit">Read More</button>
-                                <button class="btn btn-outline-success btn-green-transparent btn-more sp-show" type="submit">Read More</button>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <img class="img-block" src="/testfrontend2/img/lower-content-img.png" alt="">
@@ -473,17 +472,17 @@
                             <div class="container">
                                 <div class="row z-index2">
                                     <div class="col-lg-4 col-12">
-                                        <div class="ld-card green-arrow">
+                                        <div class="ld-card green-arrow ld-card-1">
                                         <p class="caption">First Connect your Metamask or TrustWallet to the "Connect Wallet" on the Homepage.</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 mt-1-sp mt-2-tb  col-12">
-                                        <div class="ld-card yellow-arrow">
+                                        <div class="ld-card yellow-arrow ld-card-2">
                                         <p class="caption">Then send minimum of 0.1 BNB or maximum of 10 BNB to the Presale wallet</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 mt-1-sp mt-2-tb  col-12">
-                                        <div class="ld-card">
+                                        <div class="ld-card ld-card-3">
                                         <p class="caption">Then after you will received your $WNTR to your address within 24hours.</p>
                                         </div>
                                     </div>
