--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -179,7 +179,7 @@
                                     <!-- Tabbing -->
                                     <div class="col-lg-3 col-md-4 sp-none">
                                         <div class="d-flex align-items-start">
-                                            <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
+                                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                                                 aria-orientation="vertical">
                                                 <button class="nav-link active" onclick="openTab(event, '2018')"
                                                     id="v-pills-2018-tab">2018</button>
