--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -117,7 +117,7 @@
                                                     </div>
                                                 </div>
                                                 <button type="button" class="btn btn-primary btn-green">Learn More</button>
-                                                <div style="text-align:center; margin-top:30px;" class="sp-none">
+                                                <div style="text-align:left; margin-top:30px;" class="sp-none">
                                                     <span class="dot" onclick="currentSlide(1)"></span>
                                                     <span class="dot" onclick="currentSlide(2)"></span>
                                                 </div>
