--- a/testfrontend2/index.html
+++ b/testfrontend2/index.html
@@ -362,7 +362,7 @@
                         </div>
                         <div class="row lower-content">
                             <div class="col-lg-6 col-md-6 mt-3-sp">
-                                <h2><span><img src="/testfrontend2/img/img-logo.png" class="base-vert" alt=""></span><span class="sp-none">Tokner is coming</span><span class="sp-show">Weentar is coming</span></h2>
+                                <h2><span><img src="/testfrontend2/img/img-logo.png" class="base-vert sp-none" alt=""><img src="/testfrontend2/img/img-logo-sp.png" class="base-vert sp-show" alt=""></span><span class="sp-none">Tokner is coming</span><span class="sp-show">Weentar is coming</span></h2>
                                 <p id="caption-read" class="caption read-blur"><b>
                                     Cryptocurrency adoption is at less than 1% of the global world population with some
                                     countries and entities actively fighting against its mass adoption and the smartest
