--- a/pukultikus/index.html
+++ b/pukultikus/index.html
@@ -6,6 +6,7 @@
     <title>Pukul Tikus</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../pukultikus/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
   </head>
   <body>
     <section class="body">
@@ -14,7 +15,6 @@
         <div class="content">
           <div class="container col-8">
               <div class="row">
-                <div class="swing">Swing</div>
                 <div class="col-6 text-center">
                   <p>SCORE</p>
                 </div>
@@ -24,9 +24,22 @@
             </div>
         </div>
       </section>
-      <section class="menu">
+      <section class="menu show">
+        <div class="content container">
+            <div class="row">
+              <div class="col-4">
+                <a class="level" href="#" id="easy">EASY</a>
+              </div>
+              <div class="col-4">
+                <a class="level" href="#" id="medium">MEDIUM</a>
+              </div>
+              <div class="col-4">
+                <a class="level" href="#" id="hard">HARD</a>
+              </div>
+          </div>
+        </div>
       </section>
-      <section class="mainContent">
+      <section class="mainContent none">
         <div class="mainBackground">
           <div class="grassBackground">
             <div class="content">
@@ -64,6 +77,6 @@
       </section>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="../pukultikus/js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
